# challenge_estatistica_poetry

./: challenge_estatistica_poetry.ipynb  pyproject.toml
